@@ -59,19 +59,19 @@ public class ReplaceNodeCmd implements CollApiCmds.CollectionApiCommand {
     boolean parallel = message.getBool("parallel", false);
     ClusterState clusterState = zkStateReader.getClusterState();
 
-    if (!clusterState.liveNodesContain(source)) {
-      throw new SolrException(
-          SolrException.ErrorCode.BAD_REQUEST, "Source Node: " + source + " is not live");
-    }
     if (target != null && !clusterState.liveNodesContain(target)) {
       throw new SolrException(
-          SolrException.ErrorCode.BAD_REQUEST, "Target Node: " + target + " is not live");
+          SolrException.ErrorCode.BAD_REQUEST, "Target node: " + target + " is not live");
     } else if (clusterState.getLiveNodes().size() <= 1) {
       throw new SolrException(
           SolrException.ErrorCode.BAD_REQUEST,
           "No nodes other than the source node: "
               + source
               + " are live, therefore replicas cannot be moved");
+    } else if (source.equals(target)) {
+      throw new SolrException(
+          SolrException.ErrorCode.BAD_REQUEST,
+          "Target node: " + target + " cannot be the same as source node");
     }
     List<Replica> sourceReplicas = ReplicaMigrationUtils.getReplicasOfNode(source, clusterState);
     Map<Replica, String> replicaMovements = CollectionUtil.newHashMap(sourceReplicas.size());
