@@ -46,6 +46,8 @@ Improvements
 
 * SOLR-17211: New SolrJ JDK client supports Async (James Dyer)
 
+* SOLR-17204: REPLACENODE now supports the source node not being live (Vincent Primault)
+
 Optimizations
 ---------------------
 * SOLR-17144: Close searcherExecutor thread per core after 1 minute (Pierre Salagnac, Christine Poerschke)
